--- a/Example/AnimationSwitchingTabBar/Base.lproj/Main.storyboard
+++ b/Example/AnimationSwitchingTabBar/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="I7r-Sq-K8O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="YKC-tL-ebQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,38 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Animation Switching Tab Bar Controller-->
-        <scene sceneID="lnP-Gk-enN">
-            <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="I7r-Sq-K8O" customClass="AnimationSwitchingTabBarController" customModule="AnimationSwitchingTabBar" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="IhR-Xu-tCG">
-                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
-                    </tabBar>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
-                            <color key="value" red="0.78823529410000004" green="0.21176470589999999" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                    <connections>
-                        <segue destination="GIE-4E-I87" kind="relationship" relationship="viewControllers" id="tj4-UR-cJY"/>
-                        <segue destination="rzo-7t-Zn4" kind="relationship" relationship="viewControllers" id="Yyh-KU-i1j"/>
-                        <segue destination="7Bz-Kp-VhR" kind="relationship" relationship="viewControllers" id="ntQ-zI-Sg2"/>
-                        <segue destination="i3T-bC-v4G" kind="relationship" relationship="viewControllers" id="mUI-YE-Yg2"/>
-                        <segue destination="xjF-Ot-AkX" kind="relationship" relationship="viewControllers" id="ngw-EP-q2i"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wic-zN-na0" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="482" y="478"/>
-        </scene>
         <!--View Controller-->
         <scene sceneID="YVC-nQ-F3k">
             <objects>
-                <viewController id="GIE-4E-I87" customClass="ViewController" customModule="AnimationSwitchingTabBar_Example" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Screen1" id="GIE-4E-I87" customClass="ViewController" customModule="AnimationSwitchingTabBar_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1Ze-Rh-P8M">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -64,12 +36,35 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g9I-9G-isK" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1276" y="216"/>
+            <point key="canvasLocation" x="1276" y="85"/>
+        </scene>
+        <!--Tab Controller-->
+        <scene sceneID="bty-Pz-zrG">
+            <objects>
+                <viewController id="YKC-tL-ebQ" customClass="TabController" customModule="AnimationSwitchingTabBar_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iJu-Ag-myJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="uB2-zL-ali"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dT4-Hb-e3q">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
+                            <color key="value" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Fn-qA-QYl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="418" y="799"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Wf9-3R-cqx">
             <objects>
-                <viewController id="rzo-7t-Zn4" customClass="ViewController" customModule="AnimationSwitchingTabBar_Example" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Screen2" id="rzo-7t-Zn4" customClass="ViewController" customModule="AnimationSwitchingTabBar_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dYr-Hy-FUn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -92,12 +87,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eli-ri-jQl" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1276" y="967"/>
+            <point key="canvasLocation" x="1276" y="800"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Mf5-Hh-X82">
             <objects>
-                <viewController id="7Bz-Kp-VhR" customClass="ViewController" customModule="AnimationSwitchingTabBar_Example" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Screen3" id="7Bz-Kp-VhR" customClass="ViewController" customModule="AnimationSwitchingTabBar_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6nn-ch-siO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -120,12 +115,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X9X-fA-UhI" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1276" y="1695"/>
+            <point key="canvasLocation" x="1244" y="1509"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="9TT-LY-hJJ">
             <objects>
-                <viewController id="i3T-bC-v4G" customClass="ViewController" customModule="AnimationSwitchingTabBar_Example" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Screen4" id="i3T-bC-v4G" customClass="ViewController" customModule="AnimationSwitchingTabBar_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CQF-qm-Zzk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -148,18 +143,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6PY-ZZ-LIw" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="458" y="1282"/>
+            <point key="canvasLocation" x="1244" y="2223"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="rpi-Lf-STu">
             <objects>
-                <viewController id="xjF-Ot-AkX" customClass="ViewController" customModule="AnimationSwitchingTabBar_Example" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Screen5" id="xjF-Ot-AkX" customClass="ViewController" customModule="AnimationSwitchingTabBar_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ciS-Xi-SFI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Screen5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uiA-hJ-LYU">
-                                <rect key="frame" x="139" y="317.5" width="97" height="32.5"/>
+                                <rect key="frame" x="139" y="317.5" width="97.5" height="32.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                 <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -176,7 +171,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w34-rf-XTK" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-262" y="1297"/>
+            <point key="canvasLocation" x="1244" y="2924"/>
         </scene>
     </scenes>
     <resources>
