--- a/Example/AnimationSwitchingTabBar/Base.lproj/Main.storyboard
+++ b/Example/AnimationSwitchingTabBar/Base.lproj/Main.storyboard
@@ -32,7 +32,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Pqd-fB-maR"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="search" id="Qhz-eL-eAH" customClass="AnimationSwitchingTabBarItem" customModule="AnimationSwitchingTabBar"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="image" keyPath="iconImage" value="search"/>
+                    </userDefinedRuntimeAttributes>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g9I-9G-isK" sceneMemberID="firstResponder"/>
             </objects>
@@ -83,7 +85,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="MjO-Aj-NK7"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="download" id="Ten-Ci-Nyg" customClass="AnimationSwitchingTabBarItem" customModule="AnimationSwitchingTabBar"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="image" keyPath="iconImage" value="download"/>
+                    </userDefinedRuntimeAttributes>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eli-ri-jQl" sceneMemberID="firstResponder"/>
             </objects>
@@ -111,7 +115,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vy3-eX-C8m"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="receipt" id="RqX-Jk-jwB" customClass="AnimationSwitchingTabBarItem" customModule="AnimationSwitchingTabBar"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="image" keyPath="iconImage" value="receipt"/>
+                    </userDefinedRuntimeAttributes>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X9X-fA-UhI" sceneMemberID="firstResponder"/>
             </objects>
@@ -139,7 +145,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rdz-UW-GhW"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="camera" id="EY0-2z-PQa" customClass="AnimationSwitchingTabBarItem" customModule="AnimationSwitchingTabBar"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="image" keyPath="iconImage" value="camera"/>
+                    </userDefinedRuntimeAttributes>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6PY-ZZ-LIw" sceneMemberID="firstResponder"/>
             </objects>
@@ -167,7 +175,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SOu-LR-OFK"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="download" id="cxR-wn-5Y1" customClass="AnimationSwitchingTabBarItem" customModule="AnimationSwitchingTabBar"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="image" keyPath="iconImage" value="download"/>
+                    </userDefinedRuntimeAttributes>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w34-rf-XTK" sceneMemberID="firstResponder"/>
             </objects>
